...
            app:layout_constraintHorizontal_bias="0.497" android:id="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/number_editText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="1.0" android:gravity="center"/>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/number_editText" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.045"
            android:onClick="check"/>

</androidx.constraintlayout.widget.ConstraintLayout>
